Fix mobile text wrapping for Ones To Watch title (#12)

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -76,6 +76,8 @@
 
   & .text {
     display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   & .sub {
